issue #73 - fix layout bug from comment upload part

--- a/docs/css/src/issue.css
+++ b/docs/css/src/issue.css
@@ -50,6 +50,7 @@
 	}
 	
 	.issue-new-comment .form-upload {
+		position: relative;
 		padding: calc(var(--unit-space) * 2);
 		margin-bottom: calc(var(--unit-space) * 2);
 	}
